Fixed hero image overflowing.

--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -1,17 +1,11 @@
 .hero {
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 61.8vh;
-  max-height: 400px;
-  background: #e1e1e1;
-  font-size: 2em;
-  overflow: hidden;
+	background: #e2e2e2;
+  color: #fff;
+  text-align: center;
 }
 
 .heroGradient {
-  height: 30vh;
   position: relative;
 	background: linear-gradient(-45deg, #ee7752, #963484, #3066BE, #2AF5FF);
   animation: gradient 15s ease infinite;
@@ -21,10 +15,6 @@
 }
 
 .heroImage {
-  /*
-    Ensure golden ratio for the hero size while limiting it to some extend to
-    the viewport width
-  */
   padding-top: 2rem;
   padding-bottom: 2rem;
   height: auto;
